force-app/main/default/objects/Case/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Used in CEI rollout. 

Replaces &quot;Specifics&quot; in current production environment.</description>
    <inlineHelpText>NIR/PAF/SAF = Other Department</inlineHelpText>
    <label>Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional Charges</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>AP - - [Cost APD]</fullName>
            </value>
            <value>
                <fullName>Appointment Missed</fullName>
            </value>
            <value>
                <fullName>AR Statement</fullName>
            </value>
            <value>
                <fullName>Backhaul Not Complete</fullName>
            </value>
            <value>
                <fullName>BR - - [BX Report]</fullName>
            </value>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>BV - - [BV Error]</fullName>
            </value>
            <value>
                <fullName>BX - - [EDI, &lt; BX Threshold]</fullName>
            </value>
            <value>
                <fullName>BY - - [EDI, &gt; BY Threshold]</fullName>
            </value>
            <value>
                <fullName>CM - - [Category Manager/International Sourcing]</fullName>
            </value>
            <value>
                <fullName>CN - - [Consignment]</fullName>
            </value>
            <value>
                <fullName>Collection Request</fullName>
            </value>
            <value>
                <fullName>Company Information</fullName>
            </value>
            <value>
                <fullName>Cost Correction</fullName>
                <label>Cost Correction/Rebate</label>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit Copy</fullName>
                <label>Credit Card Receipt</label>
            </value>
            <value>
                <fullName>Customer Maintenance</fullName>
            </value>
            <value>
                <fullName>Customer Onboarding</fullName>
            </value>
            <value>
                <fullName>Customer Taxability Overrides</fullName>
            </value>
            <value>
                <fullName>Cutting/Slitting</fullName>
            </value>
            <value>
                <fullName>CW - - [Converting Workbook/BOM-Bill of Material]</fullName>
            </value>
            <value>
                <fullName>DA - - [Daily Audit Report]</fullName>
            </value>
            <value>
                <fullName>Damaged Product/Item</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Design Center NIR</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Driver/Truck Complaint</fullName>
            </value>
            <value>
                <fullName>Duplicate Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>