force-app/main/default/objects/Case/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Cost Mainenance - they have to select a division</description>
    <label>Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipLabel>Cases (Division)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>