force-app/main/default/objects/Case/fields/Done_In_One__c.field-meta.xml
<CustomField>
    <fullName>Done_In_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CEI rollout

Used to indicate the Case was resolved during the call with the customer.  If this box is checked, the Case will be updated to Closed Status.</description>
    <inlineHelpText>Check this box to close the case while you are creating it.</inlineHelpText>
    <label>Done In One</label>
    <type>Checkbox</type>
</CustomField>