force-app/main/default/objects/Case/fields/Down_Time_Cost__c.field-meta.xml
<CustomField>
    <fullName>Down_Time_Cost__c</fullName>
    <label>Down Time Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>