force-app/main/default/objects/Case/fields/Email_Counter__c.field-meta.xml
<CustomField>
    <fullName>Email_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>count of inbound emails on the case</description>
    <label>Email Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>