force-app/main/default/objects/Case/fields/Email_Origin__c.field-meta.xml
<CustomField>
    <fullName>Email_Origin__c</fullName>
    <description>This field contains all of the email addresses related to the email that created the Case.</description>
    <label>Email Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>