force-app/main/default/objects/Case/fields/EPSAction_Request__c.field-meta.xml
<CustomField>
    <fullName>EPSAction_Request__c</fullName>
    <description>EQUIPMENT PARTS AND SERVICE - Identifies what the customer is requesting</description>
    <label>Action Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Order Tracking</fullName>
            </value>
            <value>
                <fullName>Credit/Return/Dispute</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Tool Repair</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Parts Order</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Vendor Confirmation</fullName>
            </value>
            <value>
                <fullName>Credit/Return</fullName>
                <isActive>false</isActive>
                <label>Credit/Return</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>