force-app/main/default/objects/Case/fields/EPSField_Quote__c.field-meta.xml
<CustomField>
    <fullName>EPSField_Quote__c</fullName>
    <description>From Astea to identify quote given to customer</description>
    <label>Field Quote#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>