force-app/main/default/objects/Case/fields/Escalate_Assign__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Assign__c</fullName>
    <description>Used in the CEI rollout as criteria for the process builder that escalates cases after using the escalate quick action.

First attempts to escalate based on the To Address email and then based on the user&apos;s role.</description>
    <inlineHelpText># of times this case has been escalated using the Escalate action</inlineHelpText>
    <label>zzEscalate Assign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>