force-app/main/default/objects/Case/fields/Existing_Case_Email_Reply_Pendin__c.field-meta.xml
<CustomField>
    <fullName>Existing_Case_Email_Reply_Pendin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEX Console for B+S routing adaptor - Check this box if an existing Console Case has a new email coming.</description>
    <label>Existing Case Email Reply Pendin</label>
    <type>Checkbox</type>
</CustomField>