force-app/main/default/objects/Case/fields/Expect_Date__c.field-meta.xml
<CustomField>
    <fullName>Expect_Date__c</fullName>
    <description>2/16/18 - Not used on any Page Layouts</description>
    <label>Expect Date</label>
    <type>Date</type>
</CustomField>