force-app/main/default/objects/Case/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>2/16/18 - No longer used on any Active page layouts</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>