force-app/main/default/objects/Case/fields/Explanation_of_Issue_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Issue_Item_1__c</fullName>
    <label>Explanation of Issue Item #1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>