force-app/main/default/objects/Case/fields/F2C_Queue__c.field-meta.xml
<CustomField>
    <fullName>F2C_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F2C Queue</label>
    <type>Checkbox</type>
</CustomField>