force-app/main/default/objects/Case/fields/First_Email_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created to help mark when an initial notification has been sent via workflow rule</description>
    <label>First Email Notification Sent</label>
    <type>Checkbox</type>
</CustomField>