force-app/main/default/objects/Case/fields/First_User_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_User_Owner__c</fullName>
    <description>Created Date of the first STOWD that shows a &apos;User&apos; owner that isnt the sfdc admin user</description>
    <label>First User Owner</label>
    <summarizedField>STOWD__Status_Ownership_Duration__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>STOWD__Status_Ownership_Duration__c.Queue__c</field>
        <operation>equals</operation>
        <value>User</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>STOWD__Status_Ownership_Duration__c.STOWD__Owner__c</field>
        <operation>notEqual</operation>
        <value>sfdc admin</value>
    </summaryFilterItems>
    <summaryForeignKey>STOWD__Status_Ownership_Duration__c.STOWD__Parent__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>