force-app/main/default/objects/Case/fields/Freight_Price__c.field-meta.xml
<CustomField>
    <fullName>Freight_Price__c</fullName>
    <label>Freight Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>