force-app/main/default/objects/Case/fields/From_Address_of_Originating_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Address_of_Originating_Email__c</fullName>
    <description>This field contains the from address of the email message that first led to the creation of this case</description>
    <externalId>true</externalId>
    <inlineHelpText>This field contains the from address of the email message that first led to the creation of this case</inlineHelpText>
    <label>From Address of Originating Email</label>
    <type>Email</type>
</CustomField>