force-app/main/default/objects/Case/fields/Genifax_Received_Time__c.field-meta.xml
<CustomField>
    <fullName>Genifax_Received_Time__c</fullName>
    <description>used to compare when a case was created in Salesforce vs. when it was received by genifax</description>
    <formula>IF( CONTAINS( Subject , &quot;Message received from&quot;), 


IF( 
CONTAINS( Subject , &quot;PM.&quot;), 


(CreatedDate + ((((VALUE(RIGHT(LEFT(RIGHT(TRIM(Subject) , 12), 2), 2))+12)/24) + ((VALUE(LEFT(RIGHT(TRIM(Subject) , 9), 2)) / 1440)))) - ((((VALUE(LEFT(RIGHT(TEXT(CreatedDate), 9), 2))) - 5) / 24) + (VALUE(RIGHT(LEFT(RIGHT(TEXT(CreatedDate), 9), 5), 2)) / 1440)))-0.041666666666, 

((CreatedDate + ((((VALUE(RIGHT(LEFT(RIGHT(TRIM(Subject) , 12), 2), 2))+12)/24) + ((VALUE(LEFT(RIGHT(TRIM(Subject) , 9), 2)) / 1440)))) - 0.5) - ((((VALUE(LEFT(RIGHT(TEXT(CreatedDate), 9), 2))) - 5) / 24) + (VALUE(RIGHT(LEFT(RIGHT(TEXT(CreatedDate), 9), 5), 2)) / 1440)))-0.041666666666 

), 

NULL 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genifax Received Time</label>
    <type>DateTime</type>
</CustomField>