force-app/main/default/objects/Case/fields/Group_Inbox_Address__c.field-meta.xml
<CustomField>
    <fullName>Group_Inbox_Address__c</fullName>
    <label>Group Inbox Address</label>
    <type>Email</type>
</CustomField>