force-app/main/default/objects/Case/fields/Guaranteed__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzGuaranteed</label>
    <type>Checkbox</type>
</CustomField>