force-app/main/default/objects/Case/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <description>Old: IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000000yqSt&amp;oid=00DQ0000000Hls9&amp;lastMod=1284229271000&quot;, &quot;Information Email&quot; , 100, 100)</description>
    <formula>IMAGE(&quot;servlet/servlet.FileDownload?file=01570000000yqSt&quot;, &quot;Information Email&quot; , 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzInformation</label>
    <type>Text</type>
</CustomField>