force-app/main/default/objects/Case/fields/Information_Email__c.field-meta.xml
<CustomField>
    <fullName>Information_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information Email</label>
    <type>Checkbox</type>
</CustomField>