force-app/main/default/objects/Case/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <inlineHelpText>Alpha characters Uppercase, No Space or Dashes then number</inlineHelpText>
    <label>Invoice #</label>
    <length>45</length>
    <type>Text</type>
</CustomField>