force-app/main/default/objects/Case/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description>Determines whether the person that should pick up the case is the primary or the internal backup</description>
    <label>zzIs Primary</label>
    <length>6</length>
    <type>Text</type>
</CustomField>