force-app/main/default/objects/Case/fields/Is_Spam__c.field-meta.xml
<CustomField>
    <fullName>Is_Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzIs Spam</label>
    <type>Checkbox</type>
</CustomField>