force-app/main/default/objects/Case/fields/Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Count__c</fullName>
    <description>used for Cost Maintenance</description>
    <inlineHelpText>Enter the number of items on this Cost Maintenance Request</inlineHelpText>
    <label>Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>