force-app/main/default/objects/Case/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>2/16/18 - No longer used on any Active page layouts</description>
    <label>Item #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>