force-app/main/default/objects/Case/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Used in CEI rolloiut. Populated via process builder + flow for chatter/call and workflow rule + field update for outbound emails. Only populated in chatter if the case owner posts.

Date/time of the most recent call/email/chatter post. Created for the customer service console to be leveraged in escalation rules.</description>
    <inlineHelpText>When was the last call/email/chatter post?</inlineHelpText>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>