force-app/main/default/objects/Case/fields/Last_Assigner__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzLast Assigner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastAssigner</relationshipName>
    <type>Lookup</type>
</CustomField>