force-app/main/default/objects/Case/fields/Last_Inbound_Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Email_Time__c</fullName>
    <description>Used in CEI rollout. 

Stamps the value of the last time an inbound email was received. Used for list views and reporting.</description>
    <inlineHelpText>Last time the customer reached out?</inlineHelpText>
    <label>Last Inbound Email Time</label>
    <type>DateTime</type>
</CustomField>