force-app/main/default/objects/Case/fields/Last_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Date__c</fullName>
    <description>Used in the CEI rollout.

The MAX value between modified date and activity date. Formula used for time-based workflow driven logic for the requirement that &quot;8 hours since they changed any data (last modified) or actions (add an e-mail, log a call, send an e-mail, post a chatter) log an activity&quot;</description>
    <formula>IF( Last_Activity_Date__c &gt;  LastModifiedDate ,Last_Activity_Date__c ,LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Acitivty/Modification.</inlineHelpText>
    <label>Last Interaction Date</label>
    <type>DateTime</type>
</CustomField>