force-app/main/default/objects/Case/fields/Last_Modified_Date_Minus_55_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Minus_55_Minutes__c</fullName>
    <description>Used for notifications if a case gets assigned to pilot feedback queue</description>
    <formula>LastModifiedDate - 0.038194444444444444444444444444444</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzLast Modified Date Minus 55 Minutes</label>
    <type>DateTime</type>
</CustomField>