force-app/main/default/objects/Case/fields/Last_Modified_plus_30__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_plus_30__c</fullName>
    <formula>(LastModifiedDate + 0.0208333333333333333333333333333333333333333)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Plus 30</label>
    <type>DateTime</type>
</CustomField>