force-app/main/default/objects/Case/fields/Last_Outbound_User_Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_User_Email_Time__c</fullName>
    <description>Last Date/Time an email was sent from a User (not system generated)</description>
    <label>Last Outbound User Email Time</label>
    <type>DateTime</type>
</CustomField>