force-app/main/default/objects/Case/fields/Legacy_Divison_Desc__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Divison_Desc__c</fullName>
    <description>SALES SUPPORT VENDOR CLAIM PACKAGING</description>
    <formula>ShipToAccount__r.Legacy_Division_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicing Division</label>
    <type>Text</type>
</CustomField>