force-app/main/default/objects/Case/fields/Lift_Gate__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2/16/18 - No longer used on any page layouts</description>
    <label>Lift Gate</label>
    <type>Checkbox</type>
</CustomField>