force-app/main/default/objects/Case/fields/Lost_Sales_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Lost_Sales_Dollars__c</fullName>
    <description>2/16/18 - No longer used on any Active page layouts</description>
    <label>zzLost Sales Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>