force-app/main/default/objects/Case/fields/Milestone_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Target_Date__c</fullName>
    <label>Milestone Target Date</label>
    <type>DateTime</type>
</CustomField>