force-app/main/default/objects/Case/fields/Modified_Since_Last_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Modified_Since_Last_Inbound__c</fullName>
    <description>Used in CEI rollout. 

Required for a list view for inbound emails on closed cases. Does not need to be visible on page layouts.</description>
    <formula>LastModifiedDate &gt;= Last_Inbound_Email_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has this record been modified since the last time a user sent in an email?</inlineHelpText>
    <label>Modified Since Last Inbound?</label>
    <type>Checkbox</type>
</CustomField>