force-app/main/default/objects/Case/fields/NCE_Negative_Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>NCE_Negative_Customer_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for documenting the NCE process</description>
    <label>NCE - Negative Customer Experience</label>
    <type>Checkbox</type>
</CustomField>