force-app/main/default/objects/Case/fields/New_Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>New_Email_Flag__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in CEI rollout.

Populated via Workflow Rule. If the value of this field is &gt;0, then an inbound email was received while this case was closed.</description>
    <inlineHelpText>Populated via &apos;Email Message - Incoming Case Related&apos; Flow. An inbound email was received while this case was Closed if the value of this field is &gt;0.</inlineHelpText>
    <label>New Email Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>