force-app/main/default/objects/Case/fields/Order_Date_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Item_1__c</fullName>
    <label>Order Date Item #1</label>
    <type>Date</type>
</CustomField>