force-app/main/default/objects/Case/fields/Order_Date_Item_2__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Item_2__c</fullName>
    <label>Order Date Item #2</label>
    <type>Date</type>
</CustomField>