force-app/main/default/objects/Case/fields/Order_Date_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Item_3__c</fullName>
    <label>Order Date Item #3</label>
    <type>Date</type>
</CustomField>