force-app/main/default/objects/Case/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>being used by Credit &amp; Collections Cases</description>
    <externalId>true</externalId>
    <inlineHelpText>No Space or Dashes the number</inlineHelpText>
    <label>Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>