force-app/main/default/objects/Case/fields/Order_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_del__c</fullName>
    <description>SALES SUPPORT VENDOR CLAIM</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>