force-app/main/default/objects/Case/fields/Original_Priority__c.field-meta.xml
<CustomField>
    <fullName>Original_Priority__c</fullName>
    <description>The priority that the case was created as</description>
    <label>Original Priority</label>
    <length>15</length>
    <type>Text</type>
</CustomField>