force-app/main/default/objects/Case/fields/Original_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Queue_Name__c</fullName>
    <description>Holds the original name of the queue that the case was assigned to.</description>
    <label>Original Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>