force-app/main/default/objects/Case/fields/original_queue_populated__c.field-meta.xml
<CustomField>
    <fullName>original_queue_populated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>original queue populated</label>
    <type>Checkbox</type>
</CustomField>