force-app/main/default/objects/Case/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>