force-app/main/default/objects/Case/fields/Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost__c</fullName>
    <label>Other Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>