force-app/main/default/objects/Case/fields/Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Explanation__c</fullName>
    <label>Other Explanation</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>