force-app/main/default/objects/Case/fields/Other_Price__c.field-meta.xml
<CustomField>
    <fullName>Other_Price__c</fullName>
    <label>Other Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>