force-app/main/default/objects/Case/fields/Out_Of_Office_Flow__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CEI rollout.

Used on backend to automate the workflow rule for the Out of Office process - which sets the owner to the Out of Office Queue</description>
    <inlineHelpText>Check this box if this email was created by an out of office reply.</inlineHelpText>
    <label>Out Of Office Flow</label>
    <type>Checkbox</type>
</CustomField>