force-app/main/default/objects/Case/fields/Override_Outlook_Auto_Response__c.field-meta.xml
<CustomField>
    <fullName>Override_Outlook_Auto_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzOverride Outlook Auto Response</label>
    <type>Checkbox</type>
</CustomField>