force-app/main/default/objects/Case/fields/Override_Validation__c.field-meta.xml
<CustomField>
    <fullName>Override_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzOverride Validation</label>
    <type>Checkbox</type>
</CustomField>