force-app/main/default/objects/Case/fields/Owner_Assigned_by_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_by_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If code is used to assign the owner of the case, this checkbox must get checked by that code to allow exclusion from the case assignment rules</description>
    <label>Owner Assigned by Code</label>
    <type>Checkbox</type>
</CustomField>