force-app/main/default/objects/Case/fields/Owner_Clone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Clone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to User.  AB 7-2-2012</description>
    <inlineHelpText>The user assigned to the case.</inlineHelpText>
    <label>Owner - Clone</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1Clone</relationshipName>
    <type>Lookup</type>
</CustomField>