force-app/main/default/objects/Case/fields/Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Party_ID__c</fullName>
    <formula>Account.Credit_Party_ID__c</formula>
    <label>Party ID</label>
    <type>Text</type>
</CustomField>