force-app/main/default/objects/Case/fields/Payments_del__c.field-meta.xml
<CustomField>
    <fullName>Payments_del__c</fullName>
    <description>Credit &amp; Collections Case Category Picklist</description>
    <label>Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payments</valueSetName>
    </valueSet>
</CustomField>