force-app/main/default/objects/Case/fields/Pick_up_location_Different_Than_Shipto__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_location_Different_Than_Shipto__c</fullName>
    <label>Pick-up location Different Than Shipto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>