force-app/main/default/objects/Case/fields/Previous_Case_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Case_Owner_ID__c</fullName>
    <label>Attempted To Assign To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>