force-app/main/default/objects/Case/fields/Previous_Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Case_Owner_Name__c</fullName>
    <label>Attempted to Assign To Name</label>
    <type>TextArea</type>
</CustomField>