force-app/main/default/objects/Case/fields/Previous_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_ID__c</fullName>
    <label>Previous Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>