force-app/main/default/objects/Case/fields/Primary_Sales_Rep_from_Form__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_from_Form__c</fullName>
    <label>Primary Sales Rep from Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>