force-app/main/default/objects/Case/fields/Primary_Sales_Rep_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_s_Email__c</fullName>
    <label>Primary Sales Rep&apos;s Email</label>
    <type>Email</type>
</CustomField>