force-app/main/default/objects/Case/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <description>Used in CEI rollout.

Could be substituted with the existing &quot;!&quot; field, which is purely meant as a color coordinated helper field for identifying what cases need most priority.</description>
    <formula>IF(
ISPICKVAL( Priority , &quot;High&quot;),IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;yellow&quot;,30,30), IF(ISPICKVAL( Priority , &quot;Critical&quot;),IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;,30,30),IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Critical = Red
High = Yellow
Low/Med = Green</inlineHelpText>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>