force-app/main/default/objects/Case/fields/Priority_Has_Changed__c.field-meta.xml
<CustomField>
    <fullName>Priority_Has_Changed__c</fullName>
    <description>CS LEX CONSOLE - Checkbox to determine Priority field has been changed on Case</description>
    <label>Priority Has Changed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>