force-app/main/default/objects/Case/fields/Proactive_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Case_ID__c</fullName>
    <label>Proactive Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>