force-app/main/default/objects/Case/fields/Product_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Product_Disposition__c</fullName>
    <label>Product Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return to Vendor</fullName>
            </value>
            <value>
                <fullName>Dispose</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>