force-app/main/default/objects/Case/fields/Product_Disposition_Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Disposition_Other_Comments__c</fullName>
    <label>Product Disposition Other Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>